--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
     "@radix-ui/themes": "^2.0.0",
     "next": "14.0.1",
     "prisma": "^5.6.0",
