--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@radix-ui/themes": "^2.0.0",
+    "axios": "^1.5.0",
     "next": "14.0.1",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.46.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
