--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.5.0",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "prisma": "^5.6.0",
     "react": "^18",
     "react-dom": "^18",
