--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.46.1",
+    "react-icons": "^4.12.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
