--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@sentry/nextjs": "^7.93.0",
     "@tanstack/react-query": "^5.14.2",
     "axios": "^1.5.0",
     "next": "14.0.1",
